fix: update z-index of various components (#766) (#438)
- with recent changes on full screen in incident-manager we need to adjust library z-indexes to have space for full screen
- use "remark-gfm" to support table in markdown

--- a/framework/components/ADialog/ADialog.scss
+++ b/framework/components/ADialog/ADialog.scss
@@ -10,7 +10,7 @@
   background-color: $black;
   opacity: 0.5;
   pointer-events: initial;
-  z-index: 8;
+  z-index: 600;
 
   &--active {
     display: block;
@@ -26,7 +26,7 @@
   left: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  z-index: 8;
+  z-index: 600;
   border-radius: $border-radius--xlg;
 
   &--active {
