--- a/framework/components/AMenuBase/AMenuBase.scss
+++ b/framework/components/AMenuBase/AMenuBase.scss
@@ -1,7 +1,7 @@
 .a-menu-base {
   visibility: hidden;
   position: absolute;
-  z-index: 8;
+  z-index: 600;
   &--active {
     visibility: visible;
   }
