--- a/framework/components/APageOverlay/APageOverlay.scss
+++ b/framework/components/APageOverlay/APageOverlay.scss
@@ -7,5 +7,5 @@
   bottom: 0;
   left: 0;
   background: rgb(0 0 0 / 40%);
-  z-index: 3;
+  z-index: 700;
 }
