--- a/framework/components/ASidebar/ASidebar.scss
+++ b/framework/components/ASidebar/ASidebar.scss
@@ -1,7 +1,7 @@
 @import "../../styles";
 
 $base-icon-color: map-get($grey, "darken-5");
-$sidebar-z-index: 1031;
+$sidebar-z-index: 1100;
 $sidebar-width: 250px;
 $sidebar--state-collapsed-width: 70px;
 $sidebar-height: 100%;
