--- a/framework/components/AToaster/AToaster.scss
+++ b/framework/components/AToaster/AToaster.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-flow: column-reverse;
   position: fixed;
-  z-index: 8;
+  z-index: 800;
 
   &--bottom-right {
     bottom: 0;
